--- a/TruthTable/MainView.xaml
+++ b/TruthTable/MainView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TruthTable"
         mc:Ignorable="d"
-        Title="MainView" Height="450" Width="800">
+        Title="MainView"  Height="1000" Width="800" ResizeMode="NoResize">
     <Window.Resources>
         <local:MainViewModel x:Key="ViewModel"/>
     </Window.Resources>
@@ -31,8 +31,8 @@
             HorizontalAlignment="Center" 
             VerticalAlignment="Center"
             ItemsSource="{Binding Path=Lettere}">
-                <ItemsControl.ItemsPanel >
-                    <ItemsPanelTemplate >
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
                         <UniformGrid  Rows="{Binding Path=NRighe}" Columns="{Binding Path=NColonne}" Background="LightGray"/>
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
